<resources>
    <string name="app_name">Groceries</string>
    <string name="continue_as">Continue as</string>
    <string name="user">User</string>
    <string name="manager">Manager</string>
    <string name="actions">Actions</string>
    <string name="new_product">New Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="new_category">New Category</string>
    <string name="new_unit">New Unit</string>
    <string name="category">Category</string>
    <string name="unit">Unit</string>
    <string name="sort">Sort</string>
    <string name="name">Name</string>
    <string name="close">Close</string>
    <string name="submit">Submit</string>
    <string name="price">Price</string>
    <string name="quantity">quantity</string>
    <string name="validation_error_message">All fields are required and no 0 s allowed.</string>
    <string name="manage_categories">Manage categories</string>
    <string name="manage_units">Manage units</string>
    <string name="settings">Settings</string>
    <string name="title_products">Products</string>
    <string name="title_categories">Categories</string>
    <string name="edit_category">Edit Category</string>
    <string name="cart">Cart</string>
    <string name="price_value">Price: <![CDATA[<span style="color:#fca311"> %s </span>]]></string>
    <string name="total_value">Total: <![CDATA[<span style="color:#fca311"> %s </span>]]></string>
    <string name="sum_price_value">Sum Price: <![CDATA[<span style="color:#fca311"> %s </span>]]></string>
    <string name="sum_price">Sum Price</string>
    <string name="all_categories">All categories</string>
</resources>