<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="product"
            type="com.example.groceries.data.local.entity.Product" />

        <variable
            name="title"
            type="String" />
    </data>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
   >


<LinearLayout
    android:padding="20dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    >

    <LinearLayout
        android:paddingVertical="20dp"
        android:gravity="center"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <TextView
        android:paddingHorizontal="10dp"
        android:textStyle="bold"
        android:textSize="17sp"
        android:text="@{title}"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>

    <TextView
        android:paddingHorizontal="10dp"
        android:id="@+id/error"
        android:visibility="gone"
        android:textSize="16sp"
        android:text="@string/validation_error_message"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>

    <TextView
        android:paddingHorizontal="10dp"
        android:id="@+id/categoryLabel"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:text="@string/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:layout_marginHorizontal="10dp"
        android:text="@={product.name}"
        android:maxLines="1"
        android:imeOptions="actionNext"
        android:layout_marginTop="10dp"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_marginHorizontal="10dp"
        app:floatText="@={product.unitPrice}"
        android:maxLines="1"
        android:imeOptions="actionNext"
        android:layout_marginTop="10dp"
        android:hint="@string/price"
        android:digits="1234567890."
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_marginHorizontal="10dp"
        app:intText="@={product.quantity}"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:hint="@string/quantity"
        android:layout_marginTop="10dp"
        android:digits="1234567890"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:paddingHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:backgroundTint="@color/grey_200"
            android:id="@+id/btnClose"
            android:textAllCaps="false"
            android:text="@string/close"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"/>
        <Button
            android:layout_marginStart="10dp"
            android:id="@+id/btnSubmit"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>
</LinearLayout>
</ScrollView>
</layout>