<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">
    <ImageView
        android:src="@drawable/ic_grocery"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textAlignment="center"
        android:padding="10dp"
        android:text="@string/continue_as"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:paddingVertical="15dp"
        android:textAllCaps="false"
        android:id="@+id/btnUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user"
         />

    <Button
        android:paddingVertical="15dp"
        android:textAllCaps="false"
        android:id="@+id/btnManager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manager"
         />

</LinearLayout>