<?xml version="1.0" encoding="utf-8"?>
<layout>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:gravity="center_vertical"
    android:padding="10dp"
    android:layout_marginBottom="1dp">
    <TextView
        android:foreground="?attr/selectableItemBackground"
        android:paddingVertical="5dp"
        android:id="@+id/itemName"
        android:text="@string/name"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_weight=".2"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:foreground="?attr/selectableItemBackground"
        android:paddingVertical="5dp"
        android:id="@+id/itemPrice"
        android:text="@string/price"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_weight=".2"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:paddingVertical="5dp"
        android:text="@string/sum_price"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_weight=".2"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
    </TextView>
    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_weight=".2"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
    </Spinner>
    <View
        android:layout_weight=".2"
        android:layout_width="0dp"
        android:layout_height="1dp">
    </View>
</LinearLayout>
</layout>