<?xml version="1.0" encoding="utf-8"?>
<layout>

<data>
    <variable
        name="title"
        type="String" />

    <variable
        name="data"
        type="String" />
</data>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_gravity="center"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:padding="20dp"
    >

    <TextView
        android:textStyle="bold"
        android:textSize="17sp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/pageTitle"
        android:text="@{title}"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:text="@={data}"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/pageTitle"
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name" />


    <Button
        android:text="@string/close"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/grey_200"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/input"
        app:layout_constraintEnd_toStartOf="@id/btnSubmit"
        android:id="@+id/btnClose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:text="@string/submit"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/btnClose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input"
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
</layout>